UtahLiveDataTest/src/objects/r_unit__c.object
<CustomObject>
    <description>This is for the program coding block in USBE</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEPT_CD__c</fullName>
        <formula>Account__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPT CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeptName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Composite key in the format of: &quot;{!UNIT_CD__c}+{!DEPT_CD__c}+{!FY__r.FiscalYearNumber__c}&quot;</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>FiscalYear__r.FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNIT_CD__c</fullName>
        <label>UNIT_CD</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_NM__c</fullName>
        <label>UNIT NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <nameField>
        <label>UNIT CODE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>